Change to toggle mode for comment's like endpoint
