# routes/api/profile.js
@@ -4,30 +4,24 @@ const express = require("express");
 const router = express.Router();
 const Profile = require("../../models/profile");
 const Comment = require("../../models/comment");
-const Like = require("../../models/like");
 const { profileDataAccess } = require("../../data-access/profile");
 const { commentDataAccess } = require("../../data-access/comment");
-const { likeDataAccess } = require("../../data-access/like");
 const {
   createProfileController,
   getProfileByIdController,
   getProfilesController,
   createProfileCommentController,
   getProfileCommentsController,
-  likeCommentController,
-  unlikeCommentController,
 } = require("../../controllers/profile");
 const {
   createProfileValidation,
   createProfileCommentValidation,
   getProfileCommentsValidation,
-  toggleLikeCommentValidation,
 } = require("../../validations/profile");
 const { authMiddleware } = require("../../middlewares/auth");
 
 const profileDataAccessImpl = profileDataAccess(Profile);
 const commentDataAccessImpl = commentDataAccess(Comment);
-const likeDataAccessImpl = likeDataAccess(Like);
 
 module.exports = function () {
   router.get("/", getProfilesController(profileDataAccessImpl));
@@ -47,18 +41,6 @@ module.exports = function () {
     authMiddleware,
     createProfileCommentValidation,
     createProfileCommentController(profileDataAccessImpl, commentDataAccessImpl)
-  );
-  router.put(
-    "/comments/:commentId/like",
-    authMiddleware,
-    toggleLikeCommentValidation,
-    likeCommentController(commentDataAccessImpl, likeDataAccessImpl)
-  );
-  router.put(
-    "/comments/:commentId/unlike",
-    authMiddleware,
-    toggleLikeCommentValidation,
-    unlikeCommentController(commentDataAccessImpl, likeDataAccessImpl)
   );
 
   return router;
